maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:51: error: identifier expected but integer literal found.
    setIndication(0,0,nextCase[0[0]])
                               ^ShortestPathMaze:57: error: ']' expected but '}' found.
  }
  ^